build: final migration to Railway, CORS security fix and frontend updates