@@ -1,14 +1,16 @@
 package dev.notebook.notebook.config;
 
-import dev.notebook.notebook.exception.SecurityConfigurationException;
 import dev.notebook.notebook.security.JwtAuthenticationFilter;
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -17,55 +19,70 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
+@EnableWebSecurity
 @RequiredArgsConstructor
+@Order(Ordered.HIGHEST_PRECEDENCE)
 public class SecurityConfig {
 
   private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
   @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity http) {
-    try {
-      http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
-          .csrf(AbstractHttpConfigurer::disable)
-          .httpBasic(AbstractHttpConfigurer::disable)
-          .formLogin(AbstractHttpConfigurer::disable)
-          .sessionManagement(
-              session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-          .authorizeHttpRequests(
-              auth -> auth
-                  .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                  // Добавили /actuator/** в список разрешенных
-                  .requestMatchers("/api/auth/**", "/api-docs/**", "/v3/api-docs/**",
-                      "/swagger-ui/**", "/swagger-ui.html", "/actuator/**", "/", "/index.html",
-                      "/assets/**", "/favicon.svg", "/icons.svg").permitAll()
-                  .anyRequest().authenticated())
-          .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    http
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        .csrf(csrf -> csrf.disable())
+        .httpBasic(basic -> basic.disable())
+        .formLogin(form -> form.disable())
+        .logout(logout -> logout.disable())
 
-      return http.build();
-    } catch (Exception e) {
-      throw new SecurityConfigurationException("Failed to configure spring security", e);
-    }
+        .sessionManagement(session ->
+            session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+        )
+
+        .authorizeHttpRequests(auth -> auth
+            .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+            .requestMatchers(
+                "/",
+                "/api/auth/**",
+                "/api-docs/**",
+                "/v3/api-docs/**",
+                "/swagger-ui/**",
+                "/swagger-ui.html",
+                "/actuator/**",
+                "/index.html",
+                "/assets/**",
+                "/*.svg",
+                "/*.ico"
+            ).permitAll()
+            .anyRequest().authenticated()
+        )
+
+        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+    return http.build();
   }
 
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
 
-    configuration.setAllowedOrigins(List.of(
+    configuration.setAllowedOriginPatterns(List.of(
         "http://localhost:3000",
-        "http://127.0.0.1:3000",
-        "http://0.0.0.0:3000",
-        "http://localhost:5173"
+        "http://localhost:5173",
+        "https://*.railway.app", 
+        "https://*.vercel.app"
     ));
 
-    configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-    configuration.setAllowedHeaders(List.of(
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+    configuration.setAllowedHeaders(Arrays.asList(
         "Authorization",
         "Content-Type",
         "X-Requested-With",
         "Accept",
         "Origin"
     ));
+
     configuration.setAllowCredentials(true);
     configuration.setMaxAge(3600L);
 
